--- a/infra/k8s/ingress-srv-depl.yaml
+++ b/infra/k8s/ingress-srv-depl.yaml
@@ -4,6 +4,7 @@ metadata:
   name: ingress-srv
   annotations:
     kubernetes.io/ingress.class: nginx
+    ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
     - host: posts.com
